--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Beside: Leadership coach, consultant and mentor.</title>
-  <meta
-    content="I'm here as your coach, consultant, and mentor. As a former global Chief People Officer, I've played integral roles in building and steering global leadership teams through periods of transformational change and growth. I have a deep understanding of organisational dynamics, and the nuanced conversations within."
-    name="description">
+  <title>Beside: Executive coaching, culture consultancy, and HR mentoring.</title>
+  <meta content="I'm here as your coach, consultant, and mentor. As a former global Chief People Officer, I've played integral roles in building and steering global
+    leadership teams through periods of transformational change and growth. I've partnered with, and coached,
+    many leaders including Founders and C-suite teams." name="description">
   <meta content="Executive Coach, Culture Consultant, HR Mentor." name="keywords">
 
   <!-- Favicons -->
@@ -38,7 +38,6 @@
   * License: https://bootstrapmade.com/license/
   * Changed: Beside updated 30/1/2024
   ======================================================== -->
-  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 
 <body>
@@ -110,8 +109,7 @@
             </ul>
 
             <p>At Beside I work with boards, C-suite teams, leadership teams, and HR leaders from start-ups, scale-ups,
-              large
-              organisations, and non-profits offering:</p>
+              large organisations, and non-profits offering:</p>
             <ul>
               <li><strong>Tailored one-on-one coaching programmes</strong>
               </li>
@@ -193,26 +191,13 @@
           <div class="col-lg-6 px-4" data-aos="fade-left" data-aos-delay="100">
             <h3 class="resume-title">Culture Consultancy and HR Mentoring</h3>
             <div class="resume-item">
-              <p>Culture is evolving into an externally facing asset or potential liability. It is more than how
-                employees <strong><em>feel</em></strong> about the organisation, or how to best attract and retain
-                talent.
-              </p>
-              <p>
-                Culture can either bolster, or impede, the delivery of organisational strategy. As leaders create,
-                cultivate and nurture it, culture can become a potent competitive advantage.
-              </p>
-              <p>
-                With a deep understanding of the relationship between strategy and culture, I offer CEOs, and/or HR
-                Leaders, invaluable insights into bridging culture gaps within their organisations.
-              </p>
-              <p>
-                My approach involves a culture assessment with tailored strategies, and pragmatic interventions, to
-                evolve and close the gaps.
-              </p>
-              <p>
-                Whether you’re seeking specific interventions, ongoing mentoring, or sweeping cultural transformations,
-                I fully immerse myself beside you. I offer a fresh perspective facilitating meaningful change and
-                sustainable impact.
+              <p>With a deep understanding of the relationship between strategy and culture, I offer CEOs, and/or HR Leaders, invaluable insights into bridging culture gaps within their organisations. 
+              </p><p>
+                Culture can become a potent competitive advantage in the delivery of strategy when cultivated, and nurtured, intentionally. Beyond how employees <strong><em>feel</em></strong> about an organisation, or attracting and retaining talent, it is fast evolving into an externally facing asset or potential liability.  
+              </p><p>
+                My approach involves a culture assessment with tailored strategies, and pragmatic interventions, to evolve and close the gaps. 
+              </p><p>
+                Whether you're seeking specific interventions, ongoing mentoring, or sweeping cultural transformations, I fully immerse myself beside you. I offer a fresh perspective facilitating meaningful change and sustainable impact. 
               </p>
               <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different organisations have
                   different cultural
