--- a/privacy.html
+++ b/privacy.html
@@ -61,6 +61,9 @@
               <h5>Cookies</h5>
               <p>Cookies are not used for functional or tracking purposes, and we do not use third-party cookies.</p>
             </div>
+            <div data-aos="fade-up">
+              <a href="/">< Return home</a>
+            </div>
           </div>
         </div>
 
