lazy loading of images

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-10 offset-sm-1 px-5 my-3" data-aos="fade-up"
             data-aos-delay="100">
 
-            <img src="assets/img/beside-wheel.png" class="img-fluid"
+            <img src="assets/img/beside-wheel.png" loading="lazy" class="img-fluid"
               alt="A diagram showing the Beside approach. It is a venn diagram with Compassion, Clarity, and Candour on the outside. In the centre of the diagram is trust.">
             <p>
           </div>
@@ -475,7 +475,7 @@
             <p>Let's chat about how I can help you, your team and organisation. Email me: <a
                 href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
             </p>
-            <img style="padding-top: 2em;" alt="Suzy, her name in script" src="assets/img/signature.png" />
+            <img style="padding-top: 2em;" alt="Suzy, her name in script" src="assets/img/signature.png" loading="lazy" />
           </div>
         </div>
 
@@ -502,21 +502,21 @@
 
       <div class="row align-items-center gx-5">
         <div class="col-4">
-          <img src="assets/img/Ashridge-Executive-Education.png" class="img-fluid"
+          <img src="assets/img/Ashridge-Executive-Education.png" loading="lazy" class="img-fluid"
             alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
-          <img src="assets/img/EMCC accreditation logo SP.png" class="img-fluid"
+          <img src="assets/img/EMCC accreditation logo SP.png" loading="lazy" class="img-fluid"
             alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
-          <img src="assets/img/Mental-Health-First-Aider.png" class="img-fluid"
+          <img src="assets/img/Mental-Health-First-Aider.png" loading="lazy" class="img-fluid"
             alt="Mental Health First Aider logo. I'm a Certified Mental Health First Aider." data-bs-toggle="popover"
             data-bs-trigger="hover focus" data-bs-content="I'm a Certified Mental Health First Aider"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
