Ease in signature

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             <p>Let's chat about how I can help you, your team and organisation. Email me: <a
                 href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
             </p>
-            <img style="padding-top: 2em;" alt="Suzy, her name in script" src="assets/img/signature.png" loading="lazy" />
+            <div data-aos="zoom-in-down" data-aos-duration="1500"><img style="padding-top: 2em;" alt="Suzy, her name in script" src="assets/img/signature.png" loading="lazy" /></div>
           </div>
         </div>
 
