--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
         </li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class='bx bxs-help-circle'></i>
-            <span>How Beside can help</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class='bx bx-leaf'></i>
+            <span>Executive and Leadership Coaching</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class='bx bx-show'></i>
-            <span>How Beside works</span></a></li>
+            <span>Culture Consultancy and HR Mentoring</span></a></li>
         <li><a href="#testimonials" class="nav-link scrollto"><i class='bx bxs-quote-alt-left'></i><span>What clients
               say</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Work with
@@ -67,61 +67,69 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center">
+  <section id="hero" class="d-flex flex-column">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Suzy Stollery</h1>
-      <p><span class="typed" data-typed-items="Executive Coach, Culture Consultant, HR Mentor, By your side"></span></p>
+      <div class="row">
+        <div class="col">
+          <img class="img-fluid" src="assets/img/logo.svg" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h1>Suzy Stollery</h1>
+          <p><span class="typed" data-typed-items="Executive Coach, Culture Consultant, HR Mentor, By your side"></span>
+          </p>
+        </div>
+      </div>
     </div>
   </section><!-- End Hero -->
+
 
   <main id="main">
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-        <div class="section-title">
+        <div class="section-title px-4">
           <h2>About me</h2>
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 px-5">
+          <div class="col-lg-4 col-sm-10 mx-auto px-5 px-md-2 pe-lg-4">
             <img id="profile" src="assets/img/profile-img.jpg" class="img-fluid"
               alt="Profile picture of Suzy Stollery." />
           </div>
-          <div class="col-lg-8 col-md-6 pt-4 pt-lg-0 content px-4">
-            <p class="leadin">Welcome. I'm here by your side as your coach, consultant, and mentor. </p>
-            <p>As a former global Chief People Officer, I've played integral roles in building and steering global
-              leadership teams through periods of transformational change and growth. I've partnered with, and coached,
-              many leaders including Founders and C-suite teams.</p>
-            <p>I have a deep understanding of organisational dynamics, and the nuanced conversations within.</p>
-            <p>My experience spans intimate founder led start-ups, to complex global matrixed organisations. I have
-              experience in navigating both the challenges and the inherent opportunities, enabling me to create impact
-              for the benefit of all stakeholders.</p>
-            <p>I'm at my best when coaching leaders to enhance their awareness and effectiveness. I'm equally driven by
-              creating progressive workplaces people want to be a part of, and where they can thrive. </p>
+          <div class="col-lg-8 content px-4 px-md-2">
+            <p class="leadin">Welcome. I'm here as your coach, consultant, and mentor. </p>
+            <p>As a Chief People Officer, I've held integral roles in building and steering global leadership teams
+              through transformational change and growth.
+            </p>
+            <p>
+              From founder led start-ups to complex global organisations, I have a deep understanding of organisational
+              dynamics and their nuances. I help navigate challenges and identify opportunities, creating impact for all
+              stakeholders.
+            </p>
+            <p>
+              I coach leaders to sharpen their awareness and effectiveness. I consult and mentor to create successful
+              cultures that people want to be a part of, and where they can thrive.
+            </p>
+            <p>
+              I work with boards, c-suite teams, leadership teams and HR leaders. Start-ups, scale-ups, large
+              organisations and non-profits. </p>
             <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">I specialise in:</em>
             </p>
             <ul>
-              <li><strong>Executive and leadership coaching</strong>
+              <li><strong>Executive and leadership one-on-one coaching programmes</strong>
               </li>
-              <li><strong>Consultancy in culture development</strong></li>
+              <li><strong>Culture and HR strategy development</strong></li>
               <li><strong>Mentoring HR leaders</strong> </li>
-            </ul>
-
-            <p>At Beside I work with boards, C-suite teams, leadership teams, and HR leaders from start-ups, scale-ups,
-              large organisations, and non-profits offering:</p>
-            <ul>
-              <li><strong>Tailored one-on-one coaching programmes</strong>
-              </li>
-              <li><strong>Hands-on consulting and mentoring - getting involved from
-                  within</strong></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="container" data-aos="fade-up">
         <div class="row">
-          <div class="col-lg-12 col-md-6 pt-4 pt-lg-0 content px-4">
+          <div class="col-lg-10 col-md-6 content pt-3 px-4 px-md-2 mx-auto">
             <h3>Experience</h3>
             <div class="row experience">
               <div class="col-lg-6">
@@ -133,8 +141,7 @@
                       Practitioner</strong></li>
                   <li><strong>ICF Accredited Emotions Coaching Practitioner</strong>
                   </li>
-                  <li><strong>Formerly Dyson, Pukka Herbs, Unilever, Lipton,
-                      Motorola</strong></li>
+                  <li><strong>Leadership roles at Dyson, Pukka Herbs, Unilever, Lipton and Motorola</strong></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -156,27 +163,26 @@
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>How Beside can help</h2>
-          <strong class="tag-line">Growth, action and impact. All by your side.</strong>
+        <div class="section-title px-4">
+          <h2>Executive and Leadership Coaching</h2>
+          <strong class="tag-line">I challenge, encourage and support.</strong>
         </div>
 
         <div class="row">
-          <div class="col-lg-6 px-4" data-aos="fade-left" data-aos-delay="100">
-            <h3 class="resume-title">Executive and Leadership Coaching</h3>
+          <div class="col-lg-10 px-4 aos-init aos-animate mx-auto" data-aos="fade-left" data-aos-delay="100">
             <div class="resume-item pb-0">
-              <p>I walk the path beside you to help you become the most effective leader you can be. </p>
-              <p>I am a safe and confidential thought partner for you to explore how you can grow as a leader. I support
-                you to navigate your path ahead with clarity and conviction. </p>
-              <p>You're already highly skilled and experienced at what you do, however you may be feeling there's
-                something missing in reaching your, or your teams', full potential. You're potentially seeking to become
-                unstuck or enhance your leadership presence. </p>
-              <p>You may be in a new role or thinking about changing role. Perhaps, you're a CEO seeking to share
-                vulnerability and grow confidence, or a Founder with a desire to scale your business for growth.</p>
-              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different leaders have different
-                  challenges.
-                  Together we work out the right coaching approach for
-                  you. I work with:</em></p>
+              <p>Though already highly skilled and experienced, you may be stuck or feel there's something missing in
+                reaching your or your teams' full potential.
+              </p>
+              <p>
+                You may be in a new role or striving for a change. Perhaps, you're a CEO seeking an open dialogue or a
+                founder scaling your business.
+              </p>
+              <p>
+                Together we identify the right approach for you to become more effective. I support you to navigate your
+                path forward with greater clarity and stronger conviction.
+              </p>
+              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">I work with:</em></p>
               <ul>
                 <li><strong>CEOs</strong> – new and established</li>
                 <li><strong>Founders</strong></li>
@@ -188,21 +194,34 @@
             </div>
 
           </div>
-          <div class="col-lg-6 px-4" data-aos="fade-left" data-aos-delay="100">
-            <h3 class="resume-title">Culture Consultancy and HR Mentoring</h3>
+
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
+
+    <!-- ======= Services (How to) Section ======= -->
+    <section id="services" class="resume">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title px-4">
+          <h2>Culture Consultancy and HR Mentoring</h2>
+          <strong class="tag-line">Growth, action and impact.</strong>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-10 px-4 aos-init aos-animate mx-auto" data-aos="fade-left" data-aos-delay="100">
             <div class="resume-item">
-              <p>With a deep understanding of the relationship between strategy and culture, I offer CEOs, and/or HR Leaders, invaluable insights into bridging culture gaps within their organisations. 
-              </p><p>
-                Culture can become a potent competitive advantage in the delivery of strategy when cultivated, and nurtured, intentionally. Beyond how employees <strong><em>feel</em></strong> about an organisation, or attracting and retaining talent, it is fast evolving into an externally facing asset or potential liability.  
-              </p><p>
-                My approach involves a culture assessment with tailored strategies, and pragmatic interventions, to evolve and close the gaps. 
-              </p><p>
-                Whether you're seeking specific interventions, ongoing mentoring, or sweeping cultural transformations, I fully immerse myself beside you. I offer a fresh perspective facilitating meaningful change and sustainable impact. 
+              <p>Culture is either an externally facing asset or a liability. More than small gestures, or simply a
+                measure of how your people feel about working with you, when cultivated with care, culture is an
+                extremely potent competitive advantage.
               </p>
-              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">Different organisations have
-                  different cultural
-                  challenges. Together we work out the right
-                  consultancy approach for you. I work with:</em></p>
+              <p>
+                I help CEOs and HR Leaders develop the interplay between strategy and culture. Whether seeking specific
+                interventions, ongoing mentoring or sweeping cultural change, I immerse myself to offer a fresh
+                perspective for meaningful progress and sustainable impact.
+              </p>
+              <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">I work with:</em></p>
               <ul>
                 <li><strong>SMEs</strong> – new and established</li>
                 <li><strong>Start-ups</strong> and <strong>scale-ups</strong></li>
@@ -210,70 +229,11 @@
                 <li><strong>Regions</strong> and <strong>markets</strong> in large organisations</li>
                 <li><strong>Non-profits</strong> and <strong>charities</strong></li>
               </ul>
-              <h3 class="tag-line">A fresh look. From the outside in and the inside out.</h3>
+              <h3 class="tag-line">Outside in. Inside out.</h3>
             </div>
           </div>
         </div>
 
-      </div>
-    </section><!-- End Resume Section -->
-
-    <!-- ======= Services (How to) Section ======= -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>How Beside works</h2>
-        </div>
-
-        <div class="row">
-          <div class="col-md-10 offset-md-1 px-5">
-            <p>I relate by placing clients at the centre and creating <strong
-                style="color: var(--link); font-weight: 600;">trust</strong>
-              built upon <strong style="color: var(--link); font-weight: 600;">compassion</strong>,
-              <strong style="color: var(--link); font-weight: 600;">clarity</strong>, and mutual
-              <strong style="color: var(--link); font-weight: 600;">candour</strong>. I bring experience, insight, and
-              pragmatic support through a relational person-centred
-              coaching, and consulting approach.
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-10 offset-sm-1 px-5 my-3" data-aos="fade-up"
-            data-aos-delay="100">
-
-            <img src="assets/img/beside-wheel.png" loading="lazy" class="img-fluid"
-              alt="A diagram showing the Beside approach. It is a venn diagram with Compassion, Clarity, and Candour on the outside. In the centre of the diagram is trust.">
-            <p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-10 offset-md-1 px-5">
-
-            <div data-aos="fade-up">
-              <h5><strong class="model">Compassionate</strong> communication enables clarity</h5>
-              <p>Compassion is conducive for open dialogue, enhancing communication and creating clarity.</p>
-            </div>
-            <div data-aos="fade-up">
-              <h5><strong class="model">Clarity</strong> enhances candour</h5>
-              <p>When the process is transparent and goals are clear, clients feel comfortable and open, meaning honest
-                and candid conversations.</p>
-            </div>
-            <div data-aos="fade-up">
-              <h5><strong class="model">Candour</strong> deepens compassion</h5>
-              </p>Authenticity and honesty. Constructive feedback and observations shared openly. I enable you to
-              identify
-              blind spots and make the necessary changes.</p>
-            </div>
-            <div data-aos="fade-up">
-              <h5><strong class="model">Trust</strong></h5>
-              </p>As these three elements interplay, trust grows. Clients know I maintain confidentiality and act in
-              their
-              best interests – <strong>always</strong>.</p>
-            </div>
-          </div>
-        </div>
 
       </div>
     </section><!-- End Services Section -->
@@ -282,7 +242,7 @@
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+        <div class="section-title px-4">
           <h2>What clients say</h2>
         </div>
 
@@ -459,23 +419,20 @@
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+        <div class="section-title px-4">
           <h2>Work with Beside</h2>
-          <strong class="tag-line">By your side, I challenge, encourage and support – objectively.</strong>
+          <strong class="tag-line">Let's chat about how I can help you, your team and organisation.</strong>
         </div>
 
         <div class="row">
-          <div class="col-lg-8 offset-lg-2 mt-5 mt-lg-0">
-            <p>One-on-one structured coaching programmes for leaders and their teams.</p>
-            <p>Or consulting and/or mentoring –
-              getting involved from within.
+          <div class="col-lg-8 px-4 aos-init aos-animate mx-auto">
+            <p>One-on-one structured coaching programmes for leaders.</p>
+            <p>Consulting or mentoring – getting involved from within.
             </p>
             <p>Online. In person. On foot. Tailored. Constant progress.
             </p>
-            <p>Let's chat about how I can help you, your team and organisation. Email me: <a
-                href="mailto:suzy@beside.coach">suzy@beside.coach</a>.
+            <p>Email me: <a href="mailto:suzy@beside.coach">suzy@beside.coach</a>
             </p>
-            <div data-aos="zoom-in-down" data-aos-duration="1500"><img style="padding-top: 2em;" alt="Suzy, her name in script" src="assets/img/signature.png" loading="lazy" /></div>
           </div>
         </div>
 
@@ -489,10 +446,10 @@
   <footer id="footer">
     <div class="container">
       <h3>
+        Suzy Stollery
         <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
           data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
           <i class='bx bx-mail-send'></i></a>
-        Suzy Stollery
         <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
           data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn" data-bs-placement="bottom"
           data-bs-custom-class="custom-popover">
