--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         </li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class='bx bx-leaf'></i>
-            <span>Executive and Leadership Coaching</span></a></li>
+            <span>Executive Coach</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class='bx bx-show'></i>
-            <span>Culture Consultancy and HR Mentoring</span></a></li>
+            <span>Culture Consultant</span></a></li>
         <li><a href="#testimonials" class="nav-link scrollto"><i class='bx bxs-quote-alt-left'></i><span>What clients
               say</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Work with
@@ -459,21 +459,21 @@
 
       <div class="row align-items-center gx-5">
         <div class="col-4">
-          <img src="assets/img/Ashridge-Executive-Education.png" loading="lazy" class="img-fluid"
+          <img src="assets/img/hult-logo-black.svg" loading="lazy"
             alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
-          <img src="assets/img/EMCC accreditation logo SP.png" loading="lazy" class="img-fluid"
+          <img src="assets/img/EMCC accreditation logo SP.svg" loading="lazy"
             alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
         <div class="col-4">
-          <img src="assets/img/Mental-Health-First-Aider.png" loading="lazy" class="img-fluid"
+          <img src="assets/img/Mental-Health-First-Aider.svg" loading="lazy"
             alt="Mental Health First Aider logo. I'm a Certified Mental Health First Aider." data-bs-toggle="popover"
             data-bs-trigger="hover focus" data-bs-content="I'm a Certified Mental Health First Aider"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
