--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
     </div>
   </section><!-- End Hero -->
 
-
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
@@ -457,22 +455,22 @@
       </h3>
       <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
 
-      <div class="row align-items-center gx-5">
-        <div class="col-4">
+      <div class="row justify-content-evenly align-items-center gx-5 pt-5">
+        <div class="col-4 col-lg-2 col-md-3">
           <img src="assets/img/hult-logo-black.svg" loading="lazy"
             alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
-        <div class="col-4">
+        <div class="col-4 col-lg-2 col-md-3">
           <img src="assets/img/EMCC accreditation logo SP.svg" loading="lazy"
             alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
-        <div class="col-4">
+        <div class="col-3 col-lg-1 col-md-2">
           <img src="assets/img/Mental-Health-First-Aider.svg" loading="lazy"
             alt="Mental Health First Aider logo. I'm a Certified Mental Health First Aider." data-bs-toggle="popover"
             data-bs-trigger="hover focus" data-bs-content="I'm a Certified Mental Health First Aider"
