--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <img id="profile" src="assets/img/profile-img.jpg" class="img-fluid"
               alt="Profile picture of Suzy Stollery." />
           </div>
-          <div class="col-lg-8 content px-5 px-md-2">
+          <div class="col-lg-8 content px-4 px-md-2">
             <p class="leadin">Welcome. I'm here as your coach, consultant, and mentor. </p>
             <p>As a Chief People Officer, I've held integral roles in building and steering global leadership teams
               through transformational change and growth.
@@ -252,12 +252,10 @@
                 <h3>Will</h3>
                 <h4>Chief Executive Officer - Ecosurety</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Suzy helped me settle into a new CEO role in a new company and in a new industry. I
+                  <strong style="color: var(--link);">“ </strong>Suzy helped me settle into a new CEO role in a new company and in a new industry. I
                   found her thoughtful approach very helpful in getting to the core of issues and
                   defining specific next steps. I would recommend Suzy to anyone looking for a caring,
-                  intelligent, and insightful coach.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  intelligent, and insightful coach.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -267,12 +265,11 @@
                 <h3>Anna</h3>
                 <h4>Strategy Director - Bray Leino</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   Working with Suzy was a game-changer for me. I appreciated her professional yet down
                   to earth style. Our coaching sessions were always purposeful and, very skilfully,
                   she helped guide me to my own conclusions, with a clarity that I just couldn't
-                  create on my own.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  create on my own.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -282,12 +279,11 @@
                 <h3>Will</h3>
                 <h4>Chief Operating Officer - Ella's Kitchen</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   Suzy creates an environment that is not just safe, but easy to express how I feel. I
                   can now use emotions and feelings as information on what to do next, and I have a
                   far greater awareness, understanding, and choice of how I want to be as a leader.
-                  It's been a brilliant experience all round.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  It's been a brilliant experience all round.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -297,12 +293,11 @@
                 <h3>Anne-Cecile</h3>
                 <h4>Commercial Strategy Director - Universal Pictures International</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   Suzy is a natural coach! She created a safe environment and a space I could openly
                   express myself. Her ability to listen and connect enabled me to see the paths and
                   choices available to me and it truly amazed me. The pace and depth of each session
-                  were perfectly balanced too. I highly recommend Suzy.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  were perfectly balanced too. I highly recommend Suzy.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -312,12 +307,11 @@
                 <h3>Seb</h3>
                 <h4>Co-Founder - Pukka Herbs</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   High emotional awareness coupled with practical professional clarity creates instant
                   trust and respect. Having a particular skill at developing leadership talent, she
                   successfully helped our directors' grow with the pace of the business, as well as
-                  create an impactful team spirit, in the face of relentless change.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  create an impactful team spirit, in the face of relentless change.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -327,12 +321,11 @@
                 <h3>Kim</h3>
                 <h4>Commercial Director - Ella's Kitchen</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   Suzy is a highly professional and warm coach who creates an open environment to
                   explore vulnerabilities, thoughts, emotions, and ideas which helped me navigate ways
                   forward. I have benefited heavily from her thoughtful and astute questioning which
-                  created very positive changes in me personally and within my role.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  created very positive changes in me personally and within my role.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -342,7 +335,7 @@
                 <h3>Bruno</h3>
                 <h4>EMEA Senior Counsel - BASF</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   I had the chance to work with Suzy when I was at a crossroads in my career and had
                   recently taken a new role. Our division had just been sold to another company and
                   was going through unprecedented changes. Rationally, I knew this whole situation
@@ -350,8 +343,7 @@
                   insecure. I feel I have grown significantly in my new role and there is no doubt in
                   my mind that Suzy, in the way she was engaged in our coaching sessions, has played a
                   significant role in that growth. She just has this talent to bring out the best in
-                  people.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  people.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -361,12 +353,11 @@
                 <h3>Ann</h3>
                 <h4>Director of Finance - NHS Trust</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   Working with Suzy helped me evaluate the way I work and think about different ways
                   to respond to problems which I'd previously struggled to solve. She also helped me
                   to identify ways I could strengthen relationships with people with different styles
-                  of working to myself whilst developing different ways of thinking and operating.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  of working to myself whilst developing different ways of thinking and operating.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -376,15 +367,14 @@
                 <h3>Camilla</h3>
                 <h4>Co-Founder - Women's Work Lab</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   We feel extremely fortunate to have had Suzy's leadership coaching during a period
                   of exceptional growth. She's helped us create an exceptionally strong foundation
                   within our Co-Founder partnership - guiding us to see where our individual strengths
                   lie, whilst also recognising how we complement one another. It really has been such
                   a joy, and we feel that the work we've done will help us to weather any inevitable
                   future storms and grow in a way that sees us both working at our best. It really has
-                  been a transformational experience for both of us.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  been a transformational experience for both of us.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -394,14 +384,13 @@
                 <h3>Kieran</h3>
                 <h4>Global Account Director - Aon</h4>
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  <strong style="color: var(--link);">“ </strong>
                   Suzy worked with me when I was going through a period of real change in my
                   professional
                   life. I had just taken on a new role which was both demanding and high profile. Suzy
                   brought a real wealth of experience, and her style is both calming and reassuring in
                   equal measure. She is an informed, capable coach and very likeable on a personal
-                  level. I would have no hesitancy in recommending her.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  level. I would have no hesitancy in recommending her.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
