--- a/privacy.html
+++ b/privacy.html
@@ -77,10 +77,10 @@
   <footer id="footer">
     <div class="container">
       <h3>
+        Suzy Stollery
         <a href="mailto:suzy@beside.coach" class="emailme" data-bs-toggle="popover" data-bs-trigger="hover focus"
           data-bs-content="Email me" data-bs-placement="bottom" data-bs-custom-class="custom-popover">
           <i class='bx bx-mail-send'></i></a>
-        Suzy Stollery
         <a href="https://www.linkedin.com/in/suzannestollery/" class="linkedin" data-bs-toggle="popover"
           data-bs-trigger="hover focus" data-bs-content="Find me on LinkedIn" data-bs-placement="bottom"
           data-bs-custom-class="custom-popover">
@@ -88,23 +88,23 @@
       </h3>
       <strong>Executive Coach, Culture Consultant, and HR Mentor.</strong>
 
-      <div class="row align-items-center gx-5">
-        <div class="col-4">
-          <img src="assets/img/Ashridge-Executive-Education.png" class="img-fluid"
+      <div class="row justify-content-evenly align-items-center gx-5 pt-5">
+        <div class="col-4 col-lg-2 col-md-3">
+          <img src="assets/img/hult-logo-black.svg" loading="lazy"
             alt="Ashridge-Hult logo. I'm an Accredited Executive Coach at Hult Ashridge Executive Education."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm an Accredited Executive Coach at Hult Ashridge Executive Education"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
         </div>
-        <div class="col-4">
-          <img src="assets/img/EMCC accreditation logo SP.png" class="img-fluid"
+        <div class="col-4 col-lg-2 col-md-3">
+          <img src="assets/img/EMCC accreditation logo SP.svg" loading="lazy"
             alt="EIA EMCC logo. I'm a Global EMCC Accredited Coach at Senior Practitioner Level."
             data-bs-toggle="popover" data-bs-trigger="hover focus"
             data-bs-content="I'm a Global EMCC Accredited Coach at Senior Practitioner Level" data-bs-placement="bottom"
             data-bs-custom-class="custom-popover" />
         </div>
-        <div class="col-4">
-          <img src="assets/img/Mental-Health-First-Aider.png" class="img-fluid"
+        <div class="col-3 col-lg-1 col-md-2">
+          <img src="assets/img/Mental-Health-First-Aider.svg" loading="lazy"
             alt="Mental Health First Aider logo. I'm a Certified Mental Health First Aider." data-bs-toggle="popover"
             data-bs-trigger="hover focus" data-bs-content="I'm a Certified Mental Health First Aider"
             data-bs-placement="bottom" data-bs-custom-class="custom-popover" />
