--- a/privacy.html
+++ b/privacy.html
@@ -113,14 +113,10 @@
 
       <div class="copyright">
         &copy; Copyright <strong><span>Beside Ltd</span></strong> | Registered company 14728891 | All Rights Reserved |
-        <a href="/privacy.html">Privacy Policy</a>
+        <a href="privacy.html">Privacy Policy</a>
       </div>
     </div>
   </footer><!-- End Footer -->
-
-  <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
