--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
               alt="Profile picture of Suzy Stollery." />
           </div>
           <div class="col-lg-8 content px-4 px-md-2">
-            <p class="leadin">Welcome. I'm here as your coach, consultant, and mentor. </p>
-            <p>As a Chief People Officer, I've held integral roles in building and steering global leadership teams
+            <p class="leadin">Welcome. I'm here as your coach, consultant and mentor. </p>
+            <p>As a Chief People Officer, I've held integral roles building and steering global leadership teams
               through transformational change and growth.
             </p>
             <p>
@@ -170,7 +170,7 @@
           <div class="col-lg-10 px-4 aos-init aos-animate mx-auto" data-aos="fade-left" data-aos-delay="100">
             <div class="resume-item pb-0">
               <p>Though already highly skilled and experienced, you may be stuck or feel there's something missing in
-                reaching your or your teams' full potential.
+                reaching your, or your teams', full potential.
               </p>
               <p>
                 You may be in a new role or striving for a change. Perhaps, you're a CEO seeking an open dialogue or a
@@ -178,7 +178,7 @@
               </p>
               <p>
                 Together we identify the right approach for you to become more effective. I support you to navigate your
-                path forward with greater clarity and stronger conviction.
+                path forward with greater clarity and a stronger conviction.
               </p>
               <p><em style="color: var(--accent); font-weight: 600; font-size: 18px">I work with:</em></p>
               <ul>
@@ -255,7 +255,7 @@
                   <strong style="color: var(--link);">“ </strong>Suzy helped me settle into a new CEO role in a new company and in a new industry. I
                   found her thoughtful approach very helpful in getting to the core of issues and
                   defining specific next steps. I would recommend Suzy to anyone looking for a caring,
-                  intelligent, and insightful coach.<strong style="color: var(--link);">”</strong>
+                  intelligent and insightful coach.<strong style="color: var(--link);">”</strong>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -323,7 +323,7 @@
                 <p>
                   <strong style="color: var(--link);">“ </strong>
                   Suzy is a highly professional and warm coach who creates an open environment to
-                  explore vulnerabilities, thoughts, emotions, and ideas which helped me navigate ways
+                  explore vulnerabilities, thoughts, emotions and ideas which helped me navigate ways
                   forward. I have benefited heavily from her thoughtful and astute questioning which
                   created very positive changes in me personally and within my role.<strong style="color: var(--link);">”</strong>
                 </p>
